--- a/src/css/MatchingPlayer.css
+++ b/src/css/MatchingPlayer.css
@@ -72,7 +72,7 @@
     border-radius: 0.5em;
     color: black;
     height: 120px;
-    width: 170px;
+    width: 140px;
     line-height: 120px;
     padding: 5px;
     position: relative;
